packagelon com.twittelonr.follow_reloncommelonndations.controllelonrs

import com.twittelonr.follow_reloncommelonndations.common.modelonls._
import com.twittelonr.follow_reloncommelonndations.configapi.ParamsFactory
import com.twittelonr.follow_reloncommelonndations.modelonls.CandidatelonUselonrDelonbugParams
import com.twittelonr.follow_reloncommelonndations.modelonls.FelonaturelonValuelon
import com.twittelonr.follow_reloncommelonndations.{thriftscala => t}
import javax.injelonct.Injelonct
import javax.injelonct.Singlelonton

@Singlelonton
class CandidatelonUselonrDelonbugParamsBuildelonr @Injelonct() (paramsFactory: ParamsFactory) {
  delonf fromThrift(relonq: t.ScoringUselonrRelonquelonst): CandidatelonUselonrDelonbugParams = {
    val clielonntContelonxt = ClielonntContelonxtConvelonrtelonr.fromThrift(relonq.clielonntContelonxt)
    val displayLocation = DisplayLocation.fromThrift(relonq.displayLocation)

    CandidatelonUselonrDelonbugParams(relonq.candidatelons.map { candidatelon =>
      candidatelon.uselonrId -> paramsFactory(
        clielonntContelonxt,
        displayLocation,
        candidatelon.felonaturelonOvelonrridelons
          .map(_.mapValuelons(FelonaturelonValuelon.fromThrift).toMap).gelontOrelonlselon(Map.elonmpty))
    }.toMap)
  }
}
